[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/Fire.png" type="Texture" id=1]
[ext_resource path="res://src/entities/PlayerFire.gd" type="Script" id=2]
[ext_resource path="res://assets/img/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.1 ) ]
}

[node name="PlayerFire" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
scale = Vector2( 1.1, 1.05 )
texture = ExtResource( 1 )
offset = Vector2( -50, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -200, -200, 400, 400 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 0, 0.882353, 1, 1 )
[connection signal="area_entered" from="." to="." method="_on_PlayerFire_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerFire_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
